--- a/autoencoders/config.yaml
+++ b/autoencoders/config.yaml
@@ -4,3 +4,8 @@ leptoquarks: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/leptoquark_LOWMASS_lepF
 ato4l: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/Ato4l_lepFilter_13TeV/Ato4l_lepFilter_13TeV.h5'
 hChToTauNu: '/eos/project/d/dshep/L1anomaly_DELPHES/hChToTauNu_13TeV_PU20.h5'
 hToTauTau: '/eos/project/d/dshep/L1anomaly_DELPHES/hToTauTau_13TeV_PU20.h5'
+
+# Graph results from Nadya
+signal: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/graph_AD_event_based/run_19/evaluated/signals_fixed_evaluated_model21_merged.h5'
+train: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/graph_AD_event_based/run_19/evaluated/background_train_fixed_evaluated_model21_merged.h5'
+test: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/graph_AD_event_based/run_19/evaluated/background_validation_fixed_evaluated_model21_merged.h5'
