--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -2,14 +2,15 @@ configfile: 'config.yaml'
 
 rule reformat_ae_l1_data:
     input:
-        data = 'output/data_-1.pickle',
-        teacher_json = '/afs/cern.ch/user/e/egovorko/eos/paper_output/model-conv_ae-8-b0-q0-not_pruned.json',
-        teacher_h5 = '/afs/cern.ch/user/e/egovorko/eos/paper_output/model-conv_ae-8-b0-q0-not_pruned.h5'
+        data = config['dataset'],
+        teacher_json = config['json'],
+        teacher_h5 = config['h5']
     output:
         train_loss = 'output/l1_ae_train_loss.h5',
         test_loss = 'output/l1_ae_test_loss.h5',
         signal_loss = 'output/l1_ae_signal_loss.h5'
     shell:
+        'mkdir -p output;'
         'python reformat_ae_l1_data.py --data-file {input.data} \
                                        --teacher-input-json {input.teacher_json} \
                                        --teacher-input-h5 {input.teacher_h5} \
@@ -29,8 +30,11 @@ rule kd_ae_l1_train:
     params:
         data_name = 'data',
         loss_name = 'teacher_loss',
-        n_features = 3
+        distillation_loss = 'mae',
+        n_features = 3,
+        plots = 'plots/ae_l1/'
     shell:
+        'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
                                           --input-test-file {input.test} \
                                           --input-signal-file {input.signal} \
@@ -42,17 +46,20 @@ rule kd_ae_l1_train:
                                           --node-size 32 \
                                           --batch-size 1024 \
                                           --n-epochs 100 \
-                                          --output-result {output.result}'
+                                          --distillation-loss {params.distillation_loss}\
+                                          --output-result {output.result} \
+                                          --output-dir {params.plots} '
 
-rule kd_plot:
+rule kd_ae_l1_plot:
     input:
         student = rules.kd_ae_l1_train.output.result,
         teacher = rules.reformat_ae_l1_data.output.test_loss,
         signal = rules.reformat_ae_l1_data.output.signal_loss
     params:
         loss_name = 'teacher_loss',
-        plots = directory('plots/ae_l1/')
+        plots = 'plots/ae_l1/'
     shell:
+        'mkdir -p {params.plots};'
         'python plot_results.py --student {input.student} \
                                 --teacher {input.teacher} \
                                 --teacher-loss-name {params.loss_name} \
@@ -70,9 +77,12 @@ rule kd_graph_train:
         result = 'output/graph_student_result.h5'
     params:
         data_name = 'InputParticlesOriginal',
-        loss_name = 'loss_pid',
-        n_features = 3
+        loss_name = 'loss_pid', # loss_all_reco_chamfer
+        distillation_loss = 'mse',
+        n_features = 3,
+        plots = 'plots/graph/'
     shell:
+        'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
                                           --input-test-file {input.test} \
                                           --input-signal-file {input.signal} \
@@ -83,17 +93,20 @@ rule kd_graph_train:
                                           --output-model-json {output.json} \
                                           --batch-size 1024 \
                                           --n-epochs 100 \
-                                          --output-result {output.result}'
+                                          --distillation-loss {params.distillation_loss}\
+                                          --output-result {output.result} \
+                                          --output-dir {params.plots} '
 
 rule kd_graph_plot:
     input:
         student = rules.kd_graph_train.output.result,
-        signal = 'output/signals_fixed_evaluated_model21_merged.h5',
-        teacher = 'output/background_validation_fixed_evaluated_model21_merged.h5'
+        signal = config['signal'],
+        teacher = config['test']
     params:
         loss_name = 'loss_pid',
-        plots = directory('plots/graph/')
+        plots = 'plots/graph/'
     shell:
+        'mkdir -p {params.plots};'
         'python plot_results.py --student {input.student} \
                                 --teacher {input.teacher} \
                                 --teacher-loss-name {params.loss_name} \
