--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -23,16 +23,18 @@ rule kd_ae_l1_train:
         train = rules.reformat_ae_l1_data.output.train_loss,
         test = rules.reformat_ae_l1_data.output.test_loss,
         signal = rules.reformat_ae_l1_data.output.signal_loss,
-    output:
-        h5 = 'output/student_model.h5',
-        json = 'output/student_model.json',
-        result = 'output/student_result.h5'
     params:
         data_name = 'data',
         loss_name = 'teacher_loss',
         distillation_loss = 'mae',
         n_features = 3,
-        plots = 'plots/ae_l1/'
+        plots = 'plots/ae_l1/',
+        shuffle_strategy = 'shuffle_all',
+        shuffle_during = 'predict'
+    output:
+        h5 = 'output/student_model.h5',
+        json = 'output/student_model.json',
+        result = 'output/student_result.h5'
     shell:
         'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
@@ -48,7 +50,9 @@ rule kd_ae_l1_train:
                                           --n-epochs 100 \
                                           --distillation-loss {params.distillation_loss}\
                                           --output-result {output.result} \
-                                          --output-dir {params.plots} '
+                                          --output-dir {params.plots} \
+                                          --particles-shuffle-strategy {params.shuffle_strategy} \
+                                          --particles-shuffle-during  {params.shuffle_during} '
 
 rule kd_ae_l1_plot:
     input:
@@ -71,16 +75,18 @@ rule kd_graph_train:
         train = config['train'],
         test = config['test'],
         signal = config['signal']
-    output:
-        h5 = 'output/graph_student_model.h5',
-        json = 'output/graph_student_model.json',
-        result = 'output/graph_student_result.h5'
     params:
         data_name = 'InputParticlesOriginal',
         loss_name = 'loss_pid', # loss_all_reco_chamfer
         distillation_loss = 'mse',
         n_features = 3,
-        plots = 'plots/graph/'
+        plots = 'plots/graph/',
+        shuffle_strategy = 'shuffle_within_pid',
+        shuffle_during = 'train_predict'
+    output:
+        h5 = "output/graph_student_model_shuffle_within_pid.h5",
+        json = "output/graph_student_model_shuffle_within_pid.json",
+        result = "output/graph_student_result_shuffle_within_pid.h5"
     shell:
         'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
@@ -91,11 +97,13 @@ rule kd_graph_train:
                                           --teacher-loss_name {params.loss_name} \
                                           --output-model-h5 {output.h5} \
                                           --output-model-json {output.json} \
-                                          --batch-size 1024 \
+                                          --batch-size 32 \
                                           --n-epochs 100 \
                                           --distillation-loss {params.distillation_loss}\
                                           --output-result {output.result} \
-                                          --output-dir {params.plots} '
+                                          --output-dir {params.plots} \
+                                          --particles-shuffle-strategy {params.shuffle_strategy} \
+                                          --particles-shuffle-during  {params.shuffle_during} '                                          
 
 rule kd_graph_plot:
     input:
@@ -104,7 +112,7 @@ rule kd_graph_plot:
         teacher = config['test']
     params:
         loss_name = 'loss_pid',
-        plots = 'plots/graph/'
+        plots = "plots/graph/"
     shell:
         'mkdir -p {params.plots};'
         'python plot_results.py --student {input.student} \
