--- a/autoencoders/environment.yml
+++ b/autoencoders/environment.yml
@@ -1,153 +1,21 @@
-name: gpu
+name: knowledge_dist
 channels:
-  - defaults
+  - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - ca-certificates=2022.2.1=h06a4308_0
-  - certifi=2021.5.30=py36h06a4308_0
-  - ld_impl_linux-64=2.35.1=h7274673_9
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - ncurses=6.3=h7f8727e_2
-  - openssl=1.1.1m=h7f8727e_0
-  - pip=21.2.2=py36h06a4308_0
-  - python=3.6.13=h12debd9_1
-  - readline=8.1.2=h7f8727e_1
-  - setuptools=58.0.4=py36h06a4308_0
-  - sqlite=3.38.0=hc218d9a_0
-  - tk=8.6.11=h1ccaba5_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
-  - zlib=1.2.11=h7f8727e_4
+  - python=3.7
+  - jupyterhub
+  - pydot
+  - graphviz
+  - pip
   - pip:
-    - absl-py==0.15.0
-    - annoy==1.17.0
-    - anyio==3.5.0
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - astunparse==1.6.3
-    - async-generator==1.10
-    - attrs==21.4.0
-    - babel==2.9.1
-    - backcall==0.2.0
-    - bleach==4.1.0
-    - blessings==1.7
-    - cachetools==4.2.4
-    - cffi==1.15.0
-    - charset-normalizer==2.0.12
-    - configargparse==1.5.3
-    - connection-pool==0.0.3
-    - contextvars==2.4
-    - dataclasses==0.8
-    - datrie==0.8.2
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - docutils==0.18.1
-    - entrypoints==0.4
-    - flatbuffers==1.12
-    - gast==0.3.3
-    - gitdb==4.0.9
-    - gitpython==3.1.18
-    - google-auth==2.6.0
-    - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - gpustat==0.6.0
-    - grpcio==1.32.0
-    - h5py==2.10.0
-    - hls4ml==0.5.1
-    - idna==3.3
-    - immutables==0.16
-    - importlib-metadata==4.8.3
-    - ipykernel==5.5.6
-    - ipython==7.16.3
-    - ipython-genutils==0.2.0
-    - jedi==0.17.2
-    - jinja2==3.0.3
-    - json5==0.9.6
-    - jsonschema==3.2.0
-    - jupyter-client==7.1.2
-    - jupyter-core==4.9.2
-    - jupyter-server==1.13.1
-    - jupyterlab==3.2.9
-    - jupyterlab-pygments==0.1.2
-    - jupyterlab-server==2.10.3
-    - keras-preprocessing==1.1.2
-    - keras-tuner==1.1.0
-    - kt-legacy==1.0.4
-    - llvmlite==0.36.0
-    - markdown==3.3.6
-    - markupsafe==2.0.1
-    - mistune==0.8.4
-    - nbclassic==0.3.5
-    - nbclient==0.5.9
-    - nbconvert==6.0.7
-    - nbformat==5.1.3
-    - nest-asyncio==1.5.4
-    - notebook==6.4.10
-    - numba==0.53.1
-    - numpy==1.19.5
-    - nvidia-ml-py3==7.352.0
-    - oauthlib==3.2.0
-    - opt-einsum==3.3.0
-    - packaging==21.3
-    - pacmap==0.4.3
-    - pandas==1.1.5
-    - pandocfilters==1.5.0
-    - parso==0.7.1
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==8.3.1
-    - ply==3.11
-    - prometheus-client==0.13.1
-    - prompt-toolkit==3.0.28
-    - protobuf==3.19.4
-    - psutil==5.9.0
-    - ptyprocess==0.7.0
-    - pulp==2.6.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pycparser==2.21
-    - pygments==2.11.2
-    - pynndescent==0.5.6
-    - pyparsing==3.0.7
-    - pyrsistent==0.18.0
-    - python-dateutil==2.8.2
-    - pytz==2021.3
-    - pyyaml==6.0
-    - pyzmq==22.3.0
-    - qkeras==0.8.0
-    - ratelimiter==1.2.0.post0
-    - requests==2.27.1
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - scipy==1.5.4
-    - send2trash==1.8.0
-    - setgpu==0.0.7
-    - six==1.15.0
-    - smart-open==5.2.1
-    - smmap==5.0.0
-    - snakemake==6.15.5
-    - sniffio==1.2.0
-    - stopit==1.1.2
-    - tensorboard==2.8.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
+    - jupyter
     - tensorflow==2.4.0
-    - tensorflow-estimator==2.4.0
-    - termcolor==1.1.0
-    - terminado==0.12.1
-    - testpath==0.6.0
-    - toposort==1.7
-    - tornado==6.1
-    - traitlets==4.3.3
-    - trimap==1.1.2
-    - typing-extensions==3.7.4.3
-    - umap-learn==0.5.2
-    - urllib3==1.26.8
-    - wcwidth==0.2.5
-    - webencodings==0.5.1
-    - websocket-client==1.3.1
-    - werkzeug==2.0.3
-    - wrapt==1.12.1
-prefix: /afs/cern.ch/work/e/egovorko/miniconda3/envs/gpu
+    - tensorflow_datasets
+    - hls4ml[profiling]==0.6.0
+    - qkeras==0.9.0
+    - scipy
+    - scikit-learn
+    - h5py
+    - snakemake
+    - matplotlib
+    - numpy
