--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -9,6 +9,8 @@ rule reformat_ae_l1_data:
         train_loss = 'output/l1_ae_train_loss.h5',
         test_loss = 'output/l1_ae_test_loss.h5',
         signal_loss = 'output/l1_ae_signal_loss.h5'
+    params:
+        log_loss = True
     shell:
         'mkdir -p output;'
         'python reformat_ae_l1_data.py --data-file {input.data} \
@@ -16,7 +18,8 @@ rule reformat_ae_l1_data:
                                        --teacher-input-h5 {input.teacher_h5} \
                                        --output-train-loss {output.train_loss} \
                                        --output-test-loss {output.test_loss} \
-                                       --output-signal-loss {output.signal_loss}'
+                                       --output-signal-loss {output.signal_loss}\
+                                       --log_loss {params.log_loss}'
 
 rule kd_ae_l1_train:
     input:
@@ -29,8 +32,8 @@ rule kd_ae_l1_train:
         distillation_loss = 'mae',
         n_features = 3,
         plots = 'plots/ae_l1/',
-        shuffle_strategy = 'shuffle_all',
-        shuffle_during = 'predict'
+        shuffle_strategy = 'none',
+        shuffle_during = 'never'
     output:
         h5 = 'output/student_model.h5',
         json = 'output/student_model.json',
@@ -81,12 +84,12 @@ rule kd_graph_train:
         distillation_loss = 'mse',
         n_features = 3,
         plots = 'plots/graph/',
-        shuffle_strategy = 'shuffle_within_pid',
+        shuffle_strategy = 'shuffle_within_between_pid',
         shuffle_during = 'train_predict'
     output:
-        h5 = "output/graph_student_model_shuffle_within_pid.h5",
-        json = "output/graph_student_model_shuffle_within_pid.json",
-        result = "output/graph_student_result_shuffle_within_pid.h5"
+        h5 = "output/graph_student_model.h5",
+        json = "output/graph_student_model.json",
+        result = "output/graph_student_result.h5"
     shell:
         'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
@@ -97,7 +100,7 @@ rule kd_graph_train:
                                           --teacher-loss_name {params.loss_name} \
                                           --output-model-h5 {output.h5} \
                                           --output-model-json {output.json} \
-                                          --batch-size 32 \
+                                          --batch-size 256 \
                                           --n-epochs 100 \
                                           --distillation-loss {params.distillation_loss}\
                                           --output-result {output.result} \
