--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -30,14 +30,17 @@ rule kd_ae_l1_train:
         data_name = 'data',
         loss_name = 'teacher_loss',
         distillation_loss = 'mae',
+        node_size = 32,
         n_features = 3,
+        batch_size = 1024,
+        n_epochs = 100,
         plots = 'plots/ae_l1/',
         shuffle_strategy = 'none',
         shuffle_during = 'never'
     output:
-        h5 = 'output/student_model.h5',
-        json = 'output/student_model.json',
-        result = 'output/student_result.h5'
+        h5 = 'output/student_model-q{quant_size}.h5',
+        json = 'output/student_model-q{quant_size}.json',
+        result = 'output/student_result-q{quant_size}.h5'
     shell:
         'mkdir -p {params.plots};'
         'python knowledge_distillation.py --input-train-file {input.train} \
@@ -48,10 +51,11 @@ rule kd_ae_l1_train:
                                           --teacher-loss_name {params.loss_name} \
                                           --output-model-h5 {output.h5} \
                                           --output-model-json {output.json} \
-                                          --node-size 32 \
-                                          --batch-size 1024 \
-                                          --n-epochs 100 \
-                                          --distillation-loss {params.distillation_loss}\
+                                          --node-size {params.node_size} \
+                                          --batch-size {params.batch_size} \
+                                          --n-epochs {params.n_epochs} \
+                                          --distillation-loss {params.distillation_loss} \
+                                          --quant-size {wildcards.quant_size} \
                                           --output-result {output.result} \
                                           --output-dir {params.plots} \
                                           --particles-shuffle-strategy {params.shuffle_strategy} \
@@ -59,19 +63,27 @@ rule kd_ae_l1_train:
 
 rule kd_ae_l1_plot:
     input:
-        student = rules.kd_ae_l1_train.output.result,
+        student = expand(rules.kd_ae_l1_train.output.result, quant_size='{quant_size}'),
         teacher = rules.reformat_ae_l1_data.output.test_loss,
         signal = rules.reformat_ae_l1_data.output.signal_loss
     params:
         loss_name = 'teacher_loss',
-        plots = 'plots/ae_l1/'
+    output:
+        plots = directory('plots-ae-l1-q{quant_size}/')
     shell:
-        'mkdir -p {params.plots};'
+        'mkdir -p {output.plots};'
         'python plot_results.py --student {input.student} \
                                 --teacher {input.teacher} \
                                 --teacher-loss-name {params.loss_name} \
-                                --output-dir {params.plots} \
+                                --output-dir {output.plots} \
                                 --signal {input.signal}'
+
+rule quantized_kd_ae_l1_plot:
+    ''' Specify to which bit to quantize the student
+        use 0 for full precision
+    '''
+    input:
+        expand(rules.kd_ae_l1_plot.output, quant_size=6)
 
 rule kd_graph_train:
     input:
