--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -88,6 +88,9 @@ rule tune_student_kd_ae_l1:
         'python tune_hyperparameters.py --input-file {input.data} \
                                         --distillation-loss {params.distillation_loss} '
 
+rule run_tensorboard:
+    shell:
+        'tensorboard --logdir=/tmp/tb_logs  --port=8896'
 
 rule quantized_kd_ae_l1_plot:
     ''' Specify to which bit to quantize the student
