--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -110,10 +110,10 @@ rule tune_student_kd_ae_l1:
     input:
         data = rules.reformat_ae_l1_data.output.train_loss
     params:
-        distillation_loss = 'mae'
+        distillation_loss = 'mae',
     output:
     shell:
-        'python tune_hyperparameters.py --input-file {input.data} \
+        'python tune_student_hyperparameters.py --input-file {input.data} \
                                         --distillation-loss {params.distillation_loss} '
 
 rule run_tensorboard:
