--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -21,6 +21,13 @@ rule reformat_ae_l1_data:
                                        --output-signal-loss {output.signal_loss}\
                                        --log-loss {params.log_loss}'
 
+rule tune_teacher_kd_ae_l1:
+    input:
+        data = rules.reformat_ae_l1_data.output.train_loss
+    params:
+    output:
+    shell:
+        'python tune_teacher_hyperparameters.py --input-file {input.data} '
 
 rule apply_selective_sampling:
     input:
