--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -23,11 +23,17 @@ rule reformat_ae_l1_data:
 
 rule tune_teacher_kd_ae_l1:
     input:
-        data = rules.reformat_ae_l1_data.output.train_loss
+        data = config['dataset']
     params:
     output:
     shell:
-        'python tune_teacher_hyperparameters.py --input-file {input.data} '
+        'python tune_teacher_hyperparameters.py {input.data} '
+
+rule run_tensorboard:
+    params:
+        port = 8896
+    shell:
+        'tensorboard --logdir=output/tb_logs  --port={params.port}'
 
 rule apply_selective_sampling:
     input:
@@ -122,10 +128,6 @@ rule tune_student_kd_ae_l1:
     shell:
         'python tune_student_hyperparameters.py --input-file {input.data} \
                                         --distillation-loss {params.distillation_loss} '
-
-rule run_tensorboard:
-    shell:
-        'tensorboard --logdir=output/tb_logs  --port=8896'
 
 rule quantized_kd_ae_l1_plot:
     ''' Specify to which bit to quantize the student
