--- a/autoencoders/config.yaml
+++ b/autoencoders/config.yaml
@@ -4,9 +4,10 @@ leptoquarks: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/leptoquark_LOWMASS_lepF
 ato4l: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/Ato4l_lepFilter_13TeV/Ato4l_lepFilter_13TeV.h5'
 hChToTauNu: '/eos/project/d/dshep/L1anomaly_DELPHES/hChToTauNu_13TeV_PU20.h5'
 hToTauTau: '/eos/project/d/dshep/L1anomaly_DELPHES/hToTauTau_13TeV_PU20.h5'
+monojet: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/files/AD_event_based/graph_data/validation/sig_fake_monojet_fixed.h5'
 
 # Datasets constructed from samples above
-dataset: '/eos/cms/store/cmst3/user/egovorko/kd_output/data_-1.pickle'
+dataset: '/eos/cms/store/cmst3/user/egovorko/kd_output/data_{events}.pickle'
 
 # Graph results from Nadya
 signal: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/graph_AD_event_based/run_19/evaluated/signals_evaluated_model21_merged_new.h5'
