--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -23,15 +23,43 @@ rule prepare_data:
                                --input-bsm {params.hToTauTau} \
                                --input-bsm {params.monojet}'
 
-rule prepare_data_all:
+rule tune_teacher_kd_ae_l1:
     input:
-        expand(rules.prepare_data.output, events=-1)
+        data = expand(config['dataset'], events=-1)
+    output:
+        'output/big_teacher.h5'
+    shell:
+        'python tune_teacher_hyperparameters.py {input.data} {output}'
+
+rule run_tensorboard:
+    params:
+        port = 8896
+    shell:
+        'tensorboard --logdir=output/tb_logs  --port={params.port}'
+
+rule check_big_teacher_performance:
+    input:
+        dataset = expand(config['dataset'], events=-1),
+        model_h5 = rules.tune_teacher_kd_ae_l1.output
+    params:
+        leptoquarks = config['leptoquarks'],
+        ato4l = config['ato4l'],
+        hChToTauNu = config['hChToTauNu'],
+        hToTauTau = config['hToTauTau'],
+        monojet = config['monojet']
+    shell:
+        'python check_ae_performance.py {input.dataset} \
+            --pretrained-ae-h5 {input.model_h5} \
+            --signal leptoquark {params.leptoquarks} \
+            --signal ato4l {params.ato4l} \
+            --signal hChToTauNu {params.hChToTauNu} \
+            --signal hToTauTau {params.hToTauTau} \
+            --signal monojet {params.monojet} '
 
 rule reformat_ae_l1_data:
     input:
-        data = config['dataset'],
-        teacher_json = config['json'],
-        teacher_h5 = config['h5']
+        data = expand(config['dataset'], events=-1),
+        teacher_h5 = rules.tune_teacher_kd_ae_l1.output
     output:
         train_loss = 'output/l1_ae_train_loss.h5',
         test_loss = 'output/l1_ae_test_loss.h5',
@@ -39,29 +67,12 @@ rule reformat_ae_l1_data:
     params:
         log_loss = True
     shell:
-        'mkdir -p output;'
         'python reformat_ae_l1_data.py --data-file {input.data} \
-                                       --teacher-input-json {input.teacher_json} \
                                        --teacher-input-h5 {input.teacher_h5} \
                                        --output-train-loss {output.train_loss} \
                                        --output-test-loss {output.test_loss} \
                                        --output-signal-loss {output.signal_loss}\
                                        --log-loss {params.log_loss}'
-
-rule tune_teacher_kd_ae_l1:
-    input:
-        data = config['dataset']
-    params:
-    output:
-    shell:
-        'rm output/tb_logs/*; '
-        'python tune_teacher_hyperparameters.py {input.data} '
-
-rule run_tensorboard:
-    params:
-        port = 8896
-    shell:
-        'tensorboard --logdir=output/tb_logs  --port={params.port}'
 
 rule apply_selective_sampling:
     input:
@@ -92,9 +103,9 @@ rule apply_selective_sampling:
 
 rule kd_ae_l1_train:
     input:
-        train = rules.apply_selective_sampling.output.train_loss_bg_sig,
+        train = rules.reformat_ae_l1_data.output.train_loss,
         test = rules.reformat_ae_l1_data.output.test_loss,
-        signal = rules.apply_selective_sampling.output.signal_loss,
+        signal = rules.reformat_ae_l1_data.output.signal_loss
     params:
         data_name = 'data',
         loss_name = 'teacher_loss',
@@ -134,7 +145,7 @@ rule kd_ae_l1_plot:
     input:
         student = expand(rules.kd_ae_l1_train.output.result, quant_size='{quant_size}'),
         teacher = rules.reformat_ae_l1_data.output.test_loss,
-        signal = rules.apply_selective_sampling.output.signal_loss
+        signal = rules.reformat_ae_l1_data.output.signal_loss
     params:
         loss_name = 'teacher_loss',
     output:
@@ -147,6 +158,13 @@ rule kd_ae_l1_plot:
                                 --output-dir {output.plots} \
                                 --signal {input.signal}'
 
+rule quantized_kd_ae_l1_plot:
+    ''' Specify to which bit to quantize the student
+        use 0 for full precision
+    '''
+    input:
+        expand(rules.kd_ae_l1_plot.output, quant_size=0)
+
 rule tune_student_kd_ae_l1:
     input:
         data = rules.reformat_ae_l1_data.output.train_loss
@@ -156,13 +174,6 @@ rule tune_student_kd_ae_l1:
     shell:
         'python tune_student_hyperparameters.py --input-file {input.data} \
                                         --distillation-loss {params.distillation_loss} '
-
-rule quantized_kd_ae_l1_plot:
-    ''' Specify to which bit to quantize the student
-        use 0 for full precision
-    '''
-    input:
-        expand(rules.kd_ae_l1_plot.output, quant_size=6)
 
 rule kd_graph_train:
     input:
